idea-plugin/src/test/resources/testData/highlighting/Invalid1.epigraph
namespace `some`

<warning descr="Unused import">import <error descr="Unresolved reference">some.other</error></warning>
<warning descr="Unused import">import <error descr="Unresolved reference">bar.EE</error></warning>
<warning descr="Duplicate import"><warning descr="Unused import">import other.OtherRecord</warning></warning>
<warning descr="Duplicate import"><warning descr="Unused import">import other.OtherRecord</warning></warning>
<warning descr="Unnecessary import">import epigraph.String</warning>
<error descr="'import foo.X' conflicts with 'import bar.X'">import foo.X</error>
<error descr="'import bar.X' conflicts with 'import foo.X'">import bar.X</error>
<warning descr="Unused import">import foo.Y</warning>

record <error descr="Type 'some.R' is already defined">R</error> extends <error descr="Unresolved reference">Q</error>
record <error descr="Type 'some.R' is already defined">R</error>

long L extends <error descr="Ambiguous type reference"><error descr="Wrong parent type kind">R</error></error>

record <error descr="Circular inheritance">R1</error> extends R2
record <error descr="Circular inheritance">R2</error> extends R1

record Q1 {
  <error descr="Field overrides nothing">override</error> f: <error descr="Ambiguous type reference">R</error>
  w: Q1 <error descr="Default override is only applicable to var types">default <error descr="Unresolved reference">x</error></error>
}

vartype <warning descr="Type 'EE' is shadowed by 'import bar.EE'">EE</warning> {
  <error descr="Tag overrides nothing">override</error> t: <error descr="Ambiguous type reference">R</error>
}

record <warning descr="Type 'OtherRecord' is shadowed by 'import other.OtherRecord'">OtherRecord</warning>

long <warning descr="Type 'Long' is shadowed by implicit 'import epigraph.Long'">Long</warning>
